fixed z index to 3 due to tabs overlapping

--- a/less/header.less
+++ b/less/header.less
@@ -7,7 +7,7 @@ header {
     flex-direction: row;
     width: 100%;
     align-items: center;
-    z-index: 1;
+    z-index: 3;
     justify-content: center;
     .header-content {
         .flex-center();
